--- a/app/src/main/res/layout/activity_add_new_note.xml
+++ b/app/src/main/res/layout/activity_add_new_note.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activities.EditNoteActivity">
+    tools:context=".Activities.AddNewNoteActivity">
 
     <ImageView
         android:id="@+id/imageView5"
@@ -13,7 +13,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="371dp"
         android:layout_marginRight="371dp"
-        android:onClick="OnClickBackFromEditNote"
+        android:onClick="backFromAddNewActivity"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -22,14 +22,13 @@
         tools:ignore="VectorDrawableCompat" />
 
     <TextView
-        android:id="@+id/nDate_edit_note"
+        android:id="@+id/textView13"
         android:layout_width="197dp"
         android:layout_height="27dp"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="32dp"
-        android:text="March 20 ,2018 15:35"
-
+        android:text=""
         android:textSize="13sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.166"
@@ -37,48 +36,46 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/nTitle_edit_note"
+        android:id="@+id/edit_text_note_name"
         android:layout_width="match_parent"
-        android:layout_height="46dp"
-        android:layout_marginHorizontal="20dp"
-        android:background="@null"
-        android:gravity="left"
-        android:text="Notes App Desing"
+        android:layout_height="50dp"
+        android:layout_marginHorizontal="10dp"
+        android:gravity="center"
+        android:hint="Enter the name of the note"
         android:textSize="22sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.381"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/nDate_edit_note" />
+        app:layout_constraintTop_toBottomOf="@+id/textView13" />
 
     <EditText
-        android:id="@+id/nContext_edit_note"
+        android:id="@+id/edit_text_note_description"
         android:layout_width="match_parent"
-        android:layout_height="6100dp"
-        android:layout_marginHorizontal="20dp"
-        android:background="@null"
-        android:gravity="left"
-        android:text="Apparently we had reached a great height in the atmosphere, for the sky was a dead black, and the stars had ceased."
+        android:layout_height="500dp"
+        android:layout_marginHorizontal="10dp"
+        android:layout_marginTop="20dp"
+        android:gravity="center_horizontal"
+        android:hint="here you can write the context of the note"
         android:textSize="16sp"
+        android:background="@null"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.347"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/nTitle_edit_note"
+        app:layout_constraintTop_toBottomOf="@+id/textView15"
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
-        android:onClick="OnClickSave"
-        android:id="@+id/done_edit_note"
+        android:onClick="OnClickAdd"
+        android:id="@+id/done_new_note"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="60dp"
         android:layout_marginLeft="60dp"
         android:layout_marginTop="16dp"
-        android:text="Save"
-        android:textAllCaps="false"
+        android:text="Add"
         android:textColor="#7B1E58"
-        android:background="@null"
-        app:layout_constraintStart_toEndOf="@+id/nDate_edit_note"
+        app:layout_constraintStart_toEndOf="@+id/textView13"
         app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
