--- a/app/src/main/res/layout/activity_forget_pass.xml
+++ b/app/src/main/res/layout/activity_forget_pass.xml
@@ -57,7 +57,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="40dp"
         android:background="#7B1E58"
-
+        android:onClick="onClickrecover"
         android:text="Recover password"
         android:textAllCaps="false"
         android:textColor="#FFF9F9"
@@ -77,7 +77,8 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:onClick="back"
-        app:srcCompat="@drawable/back" />
+        android:onClick="backFromForgetPass"
+        app:srcCompat="@drawable/back"
+        tools:ignore="VectorDrawableCompat" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
