--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -98,7 +98,7 @@
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="40dp"
-
+        android:onClick="onClickSignIn"
         android:background="#7B1E58"
         android:text="Sing in"
         android:textAllCaps="false"
