--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -99,6 +99,7 @@
         android:layout_marginBottom="40dp"
         android:background="#7B1E58"
         android:text="Sign up"
+        android:onClick="singup_do"
         android:textAllCaps="false"
         android:textColor="#FFF9F9"
         app:layout_constraintBottom_toBottomOf="parent"
